# travel

./: Cargo.toml
add_pool_args_macro/: Cargo.toml
add_pool_args_macro/src/: lib.rs
add_verify_role_block_macro/: Cargo.toml
add_verify_role_block_macro/src/: lib.rs
migrations/2024-03-25-101740_create_all_table/: up.sql
src/: config.rs  main.rs  schema.rs
src/controler/: mod.rs
src/controler/back/: admin.rs  base_product.rs  company.rs  ledger.rs  mod.rs  order.rs  product.rs  role.rs  salesman.rs
src/controler/front/: mod.rs  product.rs  user.rs
src/controller/: mod.rs
src/controller/back/: admin.rs  base_product.rs  company.rs  custom.rs  ledger.rs  mod.rs  order.rs  product.rs  role.rs  salesman.rs
src/controller/front/: mod.rs  order.rs  product.rs
src/dao/: admin.rs  base_product.rs  company.rs  ledger.rs  mod.rs  order.rs  product.rs  role.rs  salesman.rs  user.rs
src/models/: admin.rs  base_product.rs  company.rs  ledger.rs  mod.rs  order.rs  paginated.rs  product.rs  response.rs  role.rs  salesman.rs  user.rs
src/service/: admin.rs  base_product.rs  company.rs  ledger.rs  mod.rs  order.rs  product.rs  role.rs  salesman.rs  user.rs
src/utils/: mod.rs  sql_response.rs  utils.rs
src/utils/auth/: admin_data.rs  back_auth.rs  front_auth.rs  mod.rs  user_data.rs
verify_role/src/: lib.rs
