# workspace = { members = [
#   "add_pool_args_macro",
#   "add_verify_role_block_macro"
# ] }
[package]
name = "front"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
actix-web = "4"
diesel = { version = "2.1.5", features = ["mysql", "r2d2", "chrono", "bigdecimal"] }
bigdecimal = "0.4.2"
dotenv = "0.15.0"
env_logger = "0.11"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9.3"
uuid = { version = "1.4.0", features = ["serde", "v4"] }
headers = "0.4"
chrono = { version = "0.4.35", features = ["serde"] }
verify_role = { path = "./add_verify_role_block_macro" }
# add_pool_args = { path = "./add_pool_args_macro" }
